--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-slot": "^1.1.2",
     "@studio-freight/lenis": "^1.0.42",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -36,7 +37,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "split-type": "^0.3.4",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.3.0",
     "tailwind-scrollbar": "^1.0.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7"
