--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "struo-design",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://struoindia.com",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "NODE_ENV=production node app.js"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.13",
@@ -34,6 +34,7 @@
     "lucide-react": "^0.479.0",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
+    "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "split-type": "^0.3.4",
@@ -41,15 +42,5 @@
     "tailwind-scrollbar": "^1.0.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.0",
-    "postcss": "^8.5.3",
-    "typescript": "^5"
   }
 }
